Update linux package, elasticsearch install, kibana install